changed throttle default to false

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,14 @@
   display: grid;
   justify-content: center;
 }
-
+input[type="text"] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  border: none;
+  border-bottom: 2px solid rgb(24, 24, 177);
+}
 .output {
 }
 
