--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,15 @@
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  margin: 0px;
+  background-color: rgb(219, 219, 219);
+}
+
 #app {
   display: grid;
   justify-content: center;
 }
+
 input[type="text"] {
   width: 100%;
   padding: 12px 20px;
@@ -10,9 +18,16 @@ input[type="text"] {
   border: none;
   border-bottom: 2px solid rgb(24, 24, 177);
 }
-.output {
-}
 
+.repo-item {
+  display: flex;
+  justify-content: space-between;
+  background-color: rgb(241, 196, 188);
+  border-radius: 15px;
+  border-width: 4px;
+  padding: 10px;
+  margin: 10px;
+}
 #warning {
   color: rgb(167, 14, 14);
   display: none;
